@@ -90,7 +90,7 @@ m54	"Starte %s"
 m55	"Unerwartetes Ende von %s"
 m56	"Suche Desktop-Fenster von Prozess %d (%s)"
 m57	"Keine Desktop-Fenster von Prozess %d (%s) gefunden"
-m58	"Sende Window-Manager-Nachricht 'Schließen' an Prozess %d (%s)"
+m58	"Sende Nachricht 'Schließen' an Prozess %d (%s)"
 m59	"%s nicht gestartet.\nTCP-Port '%s' nicht verfügbar:\n%s"
 m60	"Lösche MyTourbook-Kachelspeicher '%s'"
 
