@@ -90,7 +90,7 @@ m54	"Starting %s"
 m55	"Unexpected end of %s"
 m56	"Searching desktop windows of process %d (%s)"
 m57	"No desktop windows of process %d (%s) found"
-m58	"Send window manager notification 'close' to process %d (%s)"
+m58	"Send notification 'close' to process %d (%s)"
 m59	"%s not started.\nTCP port '%s' not available:\n%s"
 m60	"Delete MyTourbook's tile cache folder '%s'"
 
