@@ -90,7 +90,7 @@ m54	"Démarrage %s"
 m55	"Fin inattendue de %s"
 m56	"Rechercher la fenêtre du bureau du processus %d (%s)"
 m57	"Aucune fenêtre de bureau trouvée à partir du processus %d (%s)"
-m58	"Envoyer le message «fermer» du gestionnaire de fenêtres au processus %d (%s)"
+m58	"Envoyer le message «fermer» au processus %d (%s)"
 m59	"%s n'est pas démarré.\nLe port TCP '%s' n'est pas disponible:\n%s"
 m60	"Supprimer le cache de tuiles MyTourbook '%s'"
 
